[package]
name = "toydb"
description = "A distributed SQL database"
version = "0.1.0"
authors = ["Erik Grinaker <erik@grinaker.org>"]
edition = "2018"

[dependencies]
bincode = "~1.3.3"
config = "~0.11.0"
derivative = "~2.2.0"
futures = "~0.3.15"
futures-util = "~0.3.15"
lazy_static = "~1.4.0"
log = "~0.4.14"
rand = "~0.8.3"
regex = "1.5.4"
serde = {version = "~1.0.139", features = ["derive"]}
serde_derive = "~1.0.139"
simplelog = "0.10.0"
tokio = { version = "~1.6.2" }
tokio-serde = { version = "~0.8", features = ["bincode"] }
tokio-util = { version = "~0.6.7", features = ["codec"] }
uuid = { version = "~0.8.2", features = ["v4"] }
getrandom = {version = "0.2.0", features = ["js"]}

[dev-dependencies]
goldenfile = "~1.1.0"
pretty_assertions = "~0.7.2"
serial_test = "~0.5.1"
tempdir = "~0.3.7"
tempfile = "~3.2.0"

[patch.crates-io]
getrandom = {path="../qq_party/wasmcloud_patches/getrandom",features=["js"]}